tests/error/type_errors/fun_ty_mismatch_4.err
Error: Type mismatch (at $FILE:12:11)
   | 
10 |         return x
11 | 
12 |     return bar
   |            ^^^ Expected return value of type `nat -> int`, got `nat -> nat`

Guppy compilation failed due to 1 previous error
